[tool.poetry]
name = "hangul-anagrammer"
version = "0.1.0"
description = ""
authors = ["Jonggwan Park <30569896+little7279@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
hgtk = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
